--- a/popup/files/page.css
+++ b/popup/files/page.css
@@ -1,38 +1,43 @@
 html, body {
-  width: 300px;
-  color: #fff;
-  background-color: #272B35;
+	width: 300px;
+	color: #fff;
+	background-color: #272B35;
+	font-family: Roboto;
 }
 
 .title {
-	padding-top: 0px;
-	padding-bottom: 0px;
-	padding-left: 12px;
-}
-
-.option-text {
-  width: 100%;
-  padding-left: 12px;
-  font-size: 12px;
-  text-align: left;
+	text-align: center;
 }
 
 .footer {
-  width: 100%;
-  padding: 4px;
-  text-align: center;
+	width: 100%;
+	padding: 4px;
+	text-align: center;
 }
 
-.option-button {
-  width: 100%;
-  padding-left: 12px;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  font-size: 12px;
-  text-align: left;
-  cursor: pointer;
+.button {
+	border: 2px solid #fafafa;
+	border-radius: 2px;
+	color: #fafafa;
+	background-color: #272B35;
+	font-size: 12px;
+	transition-duration: 0.4s;
+	width: 250px;
+	padding: 4px;
+	padding: 8px;
 }
 
-.option-button:hover {
-  background-color: #393F4C;
+.button:hover {
+	background-color: #fafafa;
+	color: #212121;
+}
+
+.checkbox {
+	padding: 4px;
+	padding-top: 8px;
+	padding-left: 15px
+}
+
+div {
+	margin: auto;
 }
